--- a/prive/squelettes/contenu/massicoter_image.html
+++ b/prive/squelettes/contenu/massicoter_image.html
@@ -12,7 +12,8 @@
  $(function () {
 
    var img = $('.image-massicot img'),
-       imgAreaSelector;
+       imgAreaSelector,
+       initialWidth=img.attr('width');
 
    /* Gestion du recadrage */
    function maj_formulaire (img, selection) {
@@ -36,9 +37,9 @@
    /* Une fonction qui agrandi ou rapetisse l'image */
    function zoomer_image_massicot (valeur) {
      img
-        .css('width', valeur * 100 + '%')
+        .css('width', valeur * initialWidth + 'px')
         .css('height', 'auto')
-        .css('margin-left', '-' + ((valeur * 100) - 100) / 2 + '%' );
+        .css('margin-left', '-' + (Math.max((valeur*initialWidth - 780),0) / 2) + 'px' );
      imgAreaSelector.update();
    }
 
