--- a/prive/squelettes/contenu/massicoter_image.html
+++ b/prive/squelettes/contenu/massicoter_image.html
@@ -23,24 +23,31 @@
      $('input[name=y2]').attr('value', selection.y2);
    }
 
-   imgAreaSelector = img.imgAreaSelect({
-     instance: true,
-     handles: true,
-     show: true,
-     onSelectEnd: maj_formulaire,
-     x1: $('input[name=x1]').attr('value'),
-     x2: $('input[name=x2]').attr('value'),
-     y1: $('input[name=y1]').attr('value'),
-     y2: $('input[name=y2]').attr('value')
-   });
-
    /* Une fonction qui agrandi ou rapetisse l'image */
    function zoomer_image_massicot (valeur) {
+
      img
         .css('width', valeur * initialWidth + 'px')
         .css('height', 'auto')
         .css('margin-left', '-' + (Math.max((valeur*initialWidth - 780),0) / 2) + 'px' );
-     imgAreaSelector.update();
+
+     /* On doit gérer le imgAreaSelector après avoir zoomé, sinon on
+        peut avoir des valeurs de recadrage qui semblent trop grandes
+        par rapport à l'image */
+     if ( ! imgAreaSelector) {
+       imgAreaSelector = img.imgAreaSelect({
+         instance: true,
+         handles: true,
+         show: true,
+         onSelectEnd: maj_formulaire,
+         x1: $('input[name=x1]').attr('value'),
+         x2: $('input[name=x2]').attr('value'),
+         y1: $('input[name=y1]').attr('value'),
+         y2: $('input[name=y2]').attr('value')
+       });
+     } else {
+       imgAreaSelector.update();
+     }
    }
 
    /* la valeur du zoom agit sur l'image */
