Uniformise l'appel au formulaire de massicotage

--- a/formulaires/editer_document.html
+++ b/formulaires/editer_document.html
@@ -55,8 +55,8 @@
             })]
         ]
         [(#MEDIA|=={image}|oui)
-          <a href="[(#URL_ECRIRE{massicoter_image, objet=document&id_objet=#ID_DOCUMENT}|parametre_url{redirect,#SELF})]">
-            massicoter l'image
+          <a class="bouton" href="[(#URL_ECRIRE{massicoter_image, objet=document&id_objet=#ID_DOCUMENT}|parametre_url{redirect,#SELF})]">
+            <strong><:massicot:massicoter:></strong>
           </a>
         ]
       </li>
