--- a/formulaires/inc-apercu-logo.html
+++ b/formulaires/inc-apercu-logo.html
@@ -6,7 +6,7 @@
 	<div class="taille"><:info_largeur_vignette{largeur_vignette=#GET{largeur},hauteur_vignette=#GET{hauteur}}:></div>
 	[(#ENV{editable}|oui)
   <a href="[(#URL_ECRIRE{massicoter_image, objet=#ENV{objet}&id_objet=#ENV{id_objet}}|parametre_url{redirect,#SELF})]"
-     class="bouton">Massicoter</a>
+     class="bouton"><strong><:massicot:massicoter:></strong></a>
 		<input type='submit' class='submit supprimer' id="supprimer_#ENV{quoi,logo_on}_#ENV{objet}_#ENV{id_objet}" name="supprimer_#ENV{quoi,logo_on}" value='<:lien_supprimer|ucfirst|attribut_html:>' />
 	]
 </div>
