Ajoute un label pour le zoom

--- a/formulaires/massicoter_image.html
+++ b/formulaires/massicoter_image.html
@@ -4,6 +4,7 @@
 	          parametre : url d'action ]
 	  #ACTION_FORMULAIRE{#ENV{action}}
 	  
+    <label><:massicot:zoom:></label>
     <div id="zoom-slider"></div>
 
 	  <ul>
