--- a/formulaires/massicoter_image.html
+++ b/formulaires/massicoter_image.html
@@ -29,7 +29,7 @@
         pour l'instant on ne le permet pas… */
      max: 1,
      min: .01,
-     value: #ENV{zoom},
+     value: [(#ENV{zoom}|sinon{1})],
      step: .01,
      slide: function ( event, ui ) {
        $('input#champ_zoom').attr('value', ui.value).trigger('change');
