arranger un minimum le formulaire de massicotage

--- a/formulaires/massicoter_image.html
+++ b/formulaires/massicoter_image.html
@@ -16,7 +16,7 @@
 	  
 	  <p class="boutons">
 		  <span class="image_loading"></span>
-		  <input type="submit" class="submit" value="[(#ENV{saisies_texte_submit}|sinon{<:bouton_enregistrer:>})]" />
+		  <input type="submit" class="submit" value="[(#ENV{saisies_texte_submit}|sinon{<:massicot:massicoter:>})]" />
 	  </p>
   </div>
 </form>
