Vire des fichiers inutiles + indentation

--- a/formulaires/massicoter_image.html
+++ b/formulaires/massicoter_image.html
@@ -1,23 +1,24 @@
 <form method="post" action="#ENV{action}" enctype="multipart/form-data">
   <div>
-	  [(#REM) declarer les hidden qui declencheront le service du formulaire 
-	          parametre : url d'action ]
-	  #ACTION_FORMULAIRE{#ENV{action}}
-	  
+    [(#REM) declarer les hidden qui declencheront le service du
+            formulaire parametre : url d'action ]
+    #ACTION_FORMULAIRE{#ENV{action}}
+
     <label><:massicot:zoom:></label>
     <div id="zoom-slider"></div>
 
-	  <ul>
-		  #GENERER_SAISIES{#ENV{_saisies}}
-	  </ul>
-	  
-	  [(#REM) ajouter les saisies supplementaires : extra et autre, a cet endroit ]
-	  <!--extra-->
-	  
-	  <p class="boutons">
-		  <span class="image_loading"></span>
-		  <input type="submit" class="submit" value="[(#ENV{saisies_texte_submit}|sinon{<:massicot:massicoter:>})]" />
-	  </p>
+    <ul>
+      #GENERER_SAISIES{#ENV{_saisies}}
+    </ul>
+
+    [(#REM) ajouter les saisies supplementaires : extra et autre, a
+            cet endroit ]
+    <!--extra-->
+
+    <p class="boutons">
+      <span class="image_loading"></span>
+      <input type="submit" class="submit" value="[(#ENV{saisies_texte_submit}|sinon{<:massicot:massicoter:>})]" />
+    </p>
   </div>
 </form>
 
