--- a/prive/squelettes/contenu/massicoter_image.html
+++ b/prive/squelettes/contenu/massicoter_image.html
@@ -75,7 +75,10 @@
        nouvelle_selection.y1 = Math.round(selection_actuelle.y1 / zoom * new_zoom);
        nouvelle_selection.y2 = Math.round(selection_actuelle.y2 / zoom * new_zoom);
 
-       imgAreaSelector.update();
+       nouvelle_selection.x1 = Math.max(0, nouvelle_selection.x1);
+       nouvelle_selection.y1 = Math.max(0, nouvelle_selection.y1);
+       nouvelle_selection.x2 = Math.min(nouvelle_selection.x2, img.width());
+       nouvelle_selection.y2 = Math.min(nouvelle_selection.y2, img.height());
 
        imgAreaSelector.setSelection(
          nouvelle_selection.x1,
@@ -83,6 +86,7 @@
          nouvelle_selection.x2,
          nouvelle_selection.y2
        );
+       imgAreaSelector.update();
 
        maj_formulaire(img, nouvelle_selection);
      }
