--- a/formulaires/massicoter_image.html
+++ b/formulaires/massicoter_image.html
@@ -17,6 +17,7 @@
 
     <p class="boutons">
       <span class="image_loading"></span>
+      <a href="#" id="formulaire_massicoter_image_reset"><:massicot:reinitialiser:></a>
       <input type="submit" class="submit" value="[(#ENV{saisies_texte_submit}|sinon{<:massicot:massicoter:>})]" />
     </p>
   </div>
