--- a/prive/squelettes/contenu/massicoter_image.html
+++ b/prive/squelettes/contenu/massicoter_image.html
@@ -107,5 +107,20 @@
    /* initialiser le zoom */
    $('input#champ_zoom').trigger('change');
 
+   /* Bouton de réinitialisation */
+   $('#formulaire_massicoter_image_reset').click(function (e) {
+
+     $('#zoom-slider').slider('option', 'value', 1);
+     $('input#champ_zoom').attr('value', 1);
+     zoomer_image_massicot(1);
+
+     imgAreaSelector.setSelection(0,0,img.width(),img.height());
+     imgAreaSelector.update();
+
+     maj_formulaire(img, {x1:0, y1:0, x2:img.width(), y2:img.height()});
+
+     e.preventDefault();
+     return false;
+   });
  });
 </script>
